fixed header alignment

--- a/src/components/categories/scss/categoriesList.scss
+++ b/src/components/categories/scss/categoriesList.scss
@@ -37,14 +37,10 @@
   }
 
   img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
-    @media (max-width: 768px) {
-      width: 80px;
-      height: 80px;
-    }
   }
 
   h3 {
