--- a/src/components/header/input/input.scss
+++ b/src/components/header/input/input.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   margin-right: 8px;
-  height: 40px;
+  // height: 40px;
   @media (max-width: 1024px) {
     margin-right: 0;
   }
